--- a/serverless.yml
+++ b/serverless.yml
@@ -12,7 +12,7 @@ provider:
   name: aws
   runtime: nodejs8.10
   region: ap-northeast-2
-  stage: dev
+  stage: ${opt:stage, 'dev'}
 
 functions:
   hello:
@@ -28,7 +28,7 @@ resources:
     usersTable:
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: hello
+        TableName: hello-${self:provider.stage}
         AttributeDefinitions:
           - AttributeName: id
             AttributeType: S
@@ -44,7 +44,7 @@ plugins:
 
 custom:
   customDomain:
-    domainName: hello-api.nalbam.com
+    domainName: hello-${self:provider.stage}.nalbam.com
     basePath: ''
     stage: ${self:provider.stage}
     createRoute53Record: true
