--- a/package.json
+++ b/package.json
@@ -1,22 +1,8 @@
 {
-  "name": "hello-world",
+  "name": "lambda-hello-world",
   "version": "1.0.0",
-  "description": "https://serverless.com/",
-  "main": "handler.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@gitlab.com/nalbam/hello-world.git"
-  },
-  "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://gitlab.com/nalbam/hello-world/issues"
-  },
-  "homepage": "https://gitlab.com/nalbam/hello-world#README",
+  "license": "MIT",
   "devDependencies": {
     "serverless-domain-manager": "^2.3.3"
   },
